@startuml
skinparam classAttributeIconSize 0

left to right direction

class CreateFreelancerUI {
    
}

class CreateFreelancerController {
  +Freelancer newFreelancer(name, lvlExp, email, nif, iban, adress, country)
  +registerFreelancer(freel) 
}

class Plataform {
  -String designacao
  +ResgisterFreelancer getRegisterFreelancer()
}

class FreelancersRecord {
  +Freelancer newFreelancer(name, lvlExp, email, nif, iban, adress, country)
  +registerFreelancer(freel)
  +validatesFreelancer(freel)
  +addFreelancer(freel)
  
}

class Freelancer {
  -String name
  -String level of expertise
  -String email
  -String nif
  -String iban
  -String country
  -String adress
  +validatesFreelancer(freel)
}

class Collaborator {
  -String nome
  -String email
}

class Organization {
  -String nome 
}



Organization "1" -- "*" Collaborator : possui >

Collaborator "1" -- "1" Freelancer : cria >

Plataform "1" -- "1..*" Organization : possui >
Plataform "1" -- "1" FreelancersRecord : possui >

CreateFreelancerUI ..> CreateFreelancerController
CreateFreelancerController ..> Plataform
CreateFreelancerController ..> FreelancersRecord
CreateFreelancerController ..> Freelancer

FreelancersRecord "1" -- "*" Freelancer : tem registados >


@enduml